--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <meta charset="UTF-8">
 
 
-<h1>PROGRAMA CALCULAR IMC</h1>
+<h1>PROGRAMA_CALCULAR_IMC</h1>
 
 
 <!– programa de calculo de IMC de una persona –>
